--- a/sysadmin/static/sysadmin/css/components/admin.css
+++ b/sysadmin/static/sysadmin/css/components/admin.css
@@ -20,6 +20,28 @@ body {
     background-color: white;
 }
 
+.smallbutton {
+    border: 0;
+    box-shadow: none;
+    border-radius: 5px;
+    background-color: #36A472;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.85rem;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: pointer;
+    -webkit-transition: all 0.2s ease;
+    vertical-align: middle;
+    margin-bottom: 5px;
+}
+
+.smallbutton:hover {
+    filter: brightness(110%);
+}
+
 #header-container {
     width: 80%;
     height: 10%;
