--- a/passcode/static/passcode/css/components/officer-results.css
+++ b/passcode/static/passcode/css/components/officer-results.css
@@ -49,8 +49,13 @@
     flex-basis: 10%;
 }
 
-.col-50 {
+.col-ID {
     flex-basis: 50%;
+}
+
+.col-TS {
+    flex-basis: 50%;
+    padding-left: 0%;
 }
 
 .password-reauth {
